--- a/myproject/styles.css
+++ b/myproject/styles.css
@@ -13,30 +13,41 @@ nav {
     margin: 0;
     padding: 0;
     display: flex;
-    position: sticky;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-between;
+    align-items: center;
+    position: relative;
     background-color: #fff;
 }
 
-nav > #navbar {
+#header {
     display: flex;
-    justify-content: space-evenly;
-    gap: 10px;
-    flex-direction: row;
-    margin: auto 20px auto 0;
+    align-items: center;
+    height: 100%;
+    margin: 0 auto;
+    max-width: 1200px;
+    justify-content: center;
+    width: 100%;
 }
 
-#navbar > div > h3 {
-    font-size: 1.2em;
-    padding: 2px;
-    border: 1px solid black;
-    border-radius: 5px;
-    margin-top: 5px;
+#logo-name {
+    display: flex;
+    width: 100%;
 }
 
-#navbar > div > img {
+#navbar {
+    display: flex;
+    text-align: center;
+}
+
+.nav-buttons {
+    display: flex;
+}
+
+.nav-buttons a {
+    text-decoration: none;
+    color: black;
+}
+
+.shopping-cart img {
     border: none;
     width: 40px;
     margin-left: 8px;
@@ -47,6 +58,7 @@ nav > #navbar {
     font-size: 40px;
     margin-top: 20px;
     margin-bottom: 0;
+    cursor: default;
 }
 
 nav > #logo-name {
@@ -61,10 +73,12 @@ nav > #logo-name {
 }
 
 #special {
-    margin: 20px;
+    margin: 30px auto 0;
     background-color: #fff;
-    padding: 10px 20px;
+    padding: 30px;
     border-radius: 20px;
+    max-width: 1100px;
+    box-shadow: 0 1px 2px #0000001a;
 }
 
 #special > h2 {
@@ -75,6 +89,7 @@ nav > #logo-name {
     display: flex;
     gap: 20px;
     flex-wrap: wrap;
+
 }
 
 #items img, #items h3 {
@@ -94,6 +109,9 @@ nav > #logo-name {
 .product-card-title {
     text-decoration: none;
     color: #333;
+    display: -webkit-box;
+    overflow: hidden;
+    max-width: 200px;
 }
 
 .product-card-rating-div {
@@ -104,6 +122,7 @@ nav > #logo-name {
     border-radius: 10px;
     color: #333;
     width: 100%;
+    max-width: 200px;
 }
 
 .product-card-rating-div svg {
